定义了硬件信息显示项目，修改为bool类型

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,13 +32,13 @@
    <enum>Qt::LeftToRight</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>0</y>
-      <width>311</width>
-      <height>400</height>
+      <width>441</width>
+      <height>430</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -425,7 +425,7 @@
      <x>0</x>
      <y>0</y>
      <width>703</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
