--- a/ESP8266PCReaderQTSourceCode/mainwindow.ui
+++ b/ESP8266PCReaderQTSourceCode/mainwindow.ui
@@ -9,12 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>627</height>
+    <width>390</width>
+    <height>665</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+   <sizepolicy hsizetype="Fixed" vsizetype="Maximum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -22,13 +22,7 @@
   <property name="minimumSize">
    <size>
     <width>390</width>
-    <height>512</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>394</width>
-    <height>900</height>
+    <height>665</height>
    </size>
   </property>
   <property name="focusPolicy">
@@ -65,6 +59,9 @@
       </property>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_4">
+        <property name="spacing">
+         <number>13</number>
+        </property>
         <item>
          <widget class="QGroupBox" name="groupBox_3">
           <property name="title">
@@ -122,6 +119,9 @@
            </item>
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_6">
+             <property name="spacing">
+              <number>6</number>
+             </property>
              <item>
               <widget class="QPushButton" name="saveBtn">
                <property name="text">
@@ -175,7 +175,7 @@
         <item>
          <widget class="QGroupBox" name="groupBox_2">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -186,6 +186,30 @@
           <layout class="QVBoxLayout" name="verticalLayout_8">
            <item>
             <widget class="QGroupBox" name="groupBox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>180</height>
+              </size>
+             </property>
+             <property name="sizeIncrement">
+              <size>
+               <width>0</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="baseSize">
+              <size>
+               <width>0</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="title">
               <string>硬件信息</string>
              </property>
@@ -238,9 +262,26 @@
                </layout>
               </item>
               <item>
+               <widget class="Line" name="line_2">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+               </widget>
+              </item>
+              <item>
                <layout class="QVBoxLayout" name="verticalLayout">
                 <item>
                  <layout class="QHBoxLayout" name="horizontalLayout">
+                  <item>
+                   <widget class="QCheckBox" name="CPUutiChk">
+                    <property name="text">
+                     <string>CPU使用率</string>
+                    </property>
+                    <property name="checked">
+                     <bool>false</bool>
+                    </property>
+                   </widget>
+                  </item>
                   <item>
                    <widget class="QCheckBox" name="CPUvoltChk">
                     <property name="text">
@@ -255,16 +296,6 @@
                    <widget class="QCheckBox" name="MENutiChk">
                     <property name="text">
                      <string>内存使用率</string>
-                    </property>
-                    <property name="checked">
-                     <bool>false</bool>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QCheckBox" name="CPUutiChk">
-                    <property name="text">
-                     <string>CPU使用率</string>
                     </property>
                     <property name="checked">
                      <bool>false</bool>
@@ -345,6 +376,12 @@
               </item>
               <item>
                <widget class="QCheckBox" name="GPUMCutiChk">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
                 <property name="text">
                  <string>GPU显存使用率</string>
                 </property>
@@ -359,7 +396,7 @@
            <item>
             <widget class="QGroupBox" name="groupBox_4">
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
@@ -367,103 +404,129 @@
              <property name="minimumSize">
               <size>
                <width>0</width>
-               <height>71</height>
+               <height>140</height>
               </size>
              </property>
              <property name="title">
               <string>二值化动画/图片</string>
              </property>
-             <widget class="QToolButton" name="picNameBtn">
-              <property name="geometry">
-               <rect>
-                <x>220</x>
-                <y>40</y>
-                <width>71</width>
-                <height>20</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>选择图片</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="imgNum">
-              <property name="geometry">
-               <rect>
-                <x>230</x>
-                <y>70</y>
-                <width>54</width>
-                <height>12</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>图片数:</string>
-              </property>
-             </widget>
-             <widget class="QWidget" name="">
-              <property name="geometry">
-               <rect>
-                <x>20</x>
-                <y>30</y>
-                <width>130</width>
-                <height>90</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_9">
-               <item>
-                <widget class="QCheckBox" name="imgShowChk">
-                 <property name="text">
-                  <string>显示动画/图片</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QLabel" name="imageShow">
-                 <property name="minimumSize">
-                  <size>
-                   <width>128</width>
-                   <height>64</height>
-                  </size>
-                 </property>
-                 <property name="text">
-                  <string>图片预览</string>
-                 </property>
-                 <property name="alignment">
-                  <set>Qt::AlignCenter</set>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
-             <widget class="QWidget" name="">
-              <property name="geometry">
-               <rect>
-                <x>200</x>
-                <y>100</y>
-                <width>96</width>
-                <height>25</height>
-               </rect>
-              </property>
-              <layout class="QHBoxLayout" name="horizontalLayout_8">
-               <item>
-                <widget class="QLabel" name="imgLoop">
-                 <property name="text">
-                  <string>循环次数</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QSpinBox" name="imgLoopTime">
-                 <property name="minimum">
-                  <number>1</number>
-                 </property>
-                 <property name="maximum">
-                  <number>20</number>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
+             <layout class="QVBoxLayout" name="verticalLayout_13">
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_9">
+                <item>
+                 <layout class="QVBoxLayout" name="verticalLayout_12">
+                  <item>
+                   <layout class="QVBoxLayout" name="verticalLayout_11">
+                    <item>
+                     <widget class="QCheckBox" name="imgShowChk">
+                      <property name="text">
+                       <string>显示动画/图片</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QToolButton" name="picNameBtn">
+                      <property name="text">
+                       <string>选择图片</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_8">
+                    <item>
+                     <widget class="QLabel" name="imgLoop">
+                      <property name="text">
+                       <string>循环次数</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="imgLoopTime">
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>20</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_2">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
+                 <layout class="QVBoxLayout" name="verticalLayout_9">
+                  <item>
+                   <widget class="Line" name="line_5">
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="imageShow">
+                    <property name="minimumSize">
+                     <size>
+                      <width>128</width>
+                      <height>64</height>
+                     </size>
+                    </property>
+                    <property name="text">
+                     <string>(图片预览)</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignCenter</set>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="Line" name="line_6">
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="imgNum">
+                    <property name="text">
+                     <string>请先选择图片</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
+              </item>
+             </layout>
             </widget>
+           </item>
+           <item>
+            <spacer name="verticalSpacer">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </widget>
@@ -472,19 +535,6 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <spacer name="horizontalSpacer_4">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
         <item row="0" column="2">
          <widget class="QLabel" name="outputStateLB">
           <property name="minimumSize">
@@ -497,21 +547,14 @@
            <enum>Qt::LeftToRight</enum>
           </property>
           <property name="text">
-           <string>(´ｰ∀ｰ`)</string>
+           <string>无</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QCheckBox" name="autoBox">
-          <property name="text">
-           <string>程序运行后自动启动</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="4">
+        <item row="0" column="5">
          <widget class="QPushButton" name="autoSetMsgBtn">
           <property name="minimumSize">
            <size>
@@ -533,14 +576,14 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="QLabel" name="label_4">
+        <item row="0" column="4">
+         <widget class="QCheckBox" name="autoBox">
           <property name="text">
-           <string>状态:</string>
+           <string>程序运行后自动启动</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="5">
+        <item row="0" column="6">
          <widget class="QPushButton" name="stopBtn">
           <property name="minimumSize">
            <size>
@@ -552,6 +595,26 @@
            <string>停止</string>
           </property>
          </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>状态:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
@@ -626,9 +689,15 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>394</width>
-     <height>21</height>
+     <width>390</width>
+     <height>25</height>
     </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
